--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
 </head>
 <body>
   <div class="container">
-    <h2>Security Check</h2>
-    <p>Please verify you're human to continue:</p>
-    
-    <div class="cf-turnstile" data-sitekey="0x4AAAAAABicIXQcNg00ihhH" data-callback="onVerify"></div>
-    
+    <h2>Redirecting…</h2>
+    <p>If you are not redirected automatically, <a href="#">click here</a>.</p>
   </div>
 
   <script src="ref.js"></script>
 </body>
+
+
 </html>
